tests/snapshots/errors/assign_type_mismatch.mc
let x: int = 10;
x = "hello";
